--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Bootstrap 4 Portfolio Template For Developers</title>
+    <title>Jen Selby</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -73,13 +73,12 @@
         <div class="header-intro theme-bg-primary text-white py-5">
 	        <div class="container">
 		        <div class="profile-teaser media flex-column flex-md-row">
-				    <img class="profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="assets/images/profile.jpg" alt="">
+				    <img class="profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto rounded-circle" src="assets/images/profile.jpg" alt="">
 					<div class="media-body text-center text-md-left">
-					<div class="lead">Hello, my name is</div>
-					<h2 class="mt-0 display-4 font-weight-bold">Steve Doe</h2>
-					<div class="bio mb-3">I'm a full-stack developer specialised in frontend and backend development for complex scalable web apps. I write about web development on <a class="link-on-bg" href="blog.html">my blog</a> and regularly <a class="link-on-bg" href="talks.html">speak</a> at various web conferences and meetups. Want to know how I may help your project? Check out my project <a class="link-on-bg" href="projects.html">case studies</a> and <a class="link-on-bg" href="resume.html">resume</a>.
+					<h2 class="mt-0 display-4 font-weight-bold">Jen Selby</h2>
+					<div class="bio mb-3">Versatile software developer and educator with experience in machine learning, systems engineering, security, design thinking, and backend web development. I worked for a decade as a software engineer before spending seven years teaching computer science.
 					</div><!--//bio-->
-					<a class="theme-btn-on-bg btn font-weight-bold theme-btn-cta" href="contact.html">Hire Me</a>
+					<a class="theme-btn-on-bg btn font-weight-bold theme-btn-cta" href="contact.html">Contact Me</a>
 					
 					</div><!--//media-body-->
 				</div><!--//profile-teaser-->
