--- a/index.html
+++ b/index.html
@@ -206,13 +206,7 @@
     
     <section class="section-press py-5 bg-white">
         <div class="container">
-	        <h3 class="section-title font-weight-bold text-center mb-5">Featured in</h3>
-	        <div class="press-logos row">
-		        <div class="align-self-center press-logo px-4 px-lg-3 col-6 col-lg-3 mr-0 px-md-5 px-lg-5 mb-3 mb-lg-0"><a class="logo-link" href="#" target="_blank"><img class="img-fluid svg-ie-fix" src="assets/images/logos/press-logo-1.png"></a></div>
-		        <div class="align-self-center press-logo px-4 px-lg-3  col-6 col-lg-3 mr-0 px-md-5 px-lg-5 mb-3 mb-lg-0"><a class="logo-link" href="#" target="_blank"><img class="img-fluid svg-ie-fix" src="assets/images/logos/press-logo-2.png"></a></div>
-		        <div class="align-self-center press-logo px-4 px-lg-3  col-6 col-lg-3 mr-0 px-md-5 px-lg-5 mb-3 mb-lg-0"><a class="logo-link" href="#" target="_blank"><img class="img-fluid svg-ie-fix" src="assets/images/logos/press-logo-3.png"></a></div>
-		        <div class="align-self-center press-logo px-4 px-lg-3 col-6 col-lg-3 mr-0 px-md-5 px-lg-5 mb-3 mb-lg-0"><a class="logo-link" href="#" target="_blank"><img class="img-fluid svg-ie-fix" src="assets/images/logos/press-logo-4.png"></a></div>
-	        </div>
+	        <h3 class="section-title font-weight-bold text-center mb-5">Photos</h3>
         </div><!--//container-->
     </section>
     
