--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 							    <a class="nav-link" href="#Not-Work">Not-Work</a>
 							</li>
 							<li class="nav-item mr-lg-3">
+							    <a class="nav-link" href="#Photos">Photos</a>
+							</li>
+							<li class="nav-item mr-lg-3">
 							    <a class="nav-link" href="contact.html">Contact</a>
 							</li>
 						</ul>
@@ -205,6 +208,7 @@
     </section>
     
     <section class="section-press py-5 bg-white">
+        <a name="Photos"></a>
         <div class="container">
 	        <h3 class="section-title font-weight-bold text-center mb-5">Photos</h3>
         </div><!--//container-->
