Update contact section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							    <a class="nav-link" href="#Photos">Photos</a>
 							</li>
 							<li class="nav-item mr-lg-3">
-							    <a class="nav-link" href="contact.html">Contact</a>
+							    <a class="nav-link" href="#Contact">Contact</a>
 							</li>
 						</ul>
 						<span id="slide-line"></span>
@@ -86,7 +86,7 @@
 					<h2 class="mt-0 display-4 font-weight-bold">Jen Selby</h2>
 					<div class="bio mb-3">Versatile software developer and educator with experience in machine learning, systems engineering, security, design thinking, and backend web development. I worked for a decade as a software engineer before spending seven years teaching computer science.
 					</div><!--//bio-->
-					<a class="theme-btn-on-bg btn font-weight-bold theme-btn-cta" href="contact.html">Contact Me</a>
+					<a class="theme-btn-on-bg btn font-weight-bold theme-btn-cta" href="#Contact">Contact Me</a>
 					
 					</div><!--//media-body-->
 				</div><!--//profile-teaser-->
@@ -215,16 +215,14 @@
     </section>
     
 	<section class="section-cta py-5 bg-primary text-white">
+        <a name="Contact"></a>
 		<div class="container">
 			<div class="text-center">
 			    <img class="profile-small d-inline-block mx-auto rounded-circle mb-2" src="assets/images/profile.jpg" alt="">
 		    </div>
-		    <h3 class="section-title font-weight-bold text-center mb-2">Interested in hiring me for your project?</h3>
+		    <h3 class="section-title font-weight-bold text-center mb-2">Contact Info</h3>
 		    <div class="section-intro mx-auto text-center mb-3">
-			    Looking for an experienced full-stack developer to build your web app or ship your software product? To start an initial chat, just drop me an email at <a class="link-on-bg" href="#">steve.doe@youremail.com</a> or use the <a class="link-on-bg" href="contact.html">form on the contact page</a>.
-		    </div>
-		    <div class="text-center">
-		        <a class="theme-btn-on-bg btn" href="contact.html">Let's Talk</a>
+			    The best way to get in touch with me is through email. My gmail is account is jenselby.
 		    </div>
 		</div><!--//container-->
 	</section>
