Make naming consistent

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							    <a class="nav-link" href="#Work">Work</a>
 							</li>
 							<li class="nav-item mr-lg-3">
-							    <a class="nav-link" href="#Not-Work">Not-Work</a>
+							    <a class="nav-link" href="#Other">Other</a>
 							</li>
 							<li class="nav-item mr-lg-3">
 							    <a class="nav-link" href="#Photos">Photos</a>
@@ -152,9 +152,9 @@
         </div><!--//container-->
     </section><!--//skills-section-->
     
-    <section class="section-not-work py-5">
+    <section class="section-other py-5">
         <div class="container">
-            <a name="Not-Work"></a>
+            <a name="Other"></a>
 	        <h3 class="section-title font-weight-bold text-center mb-5">Other Activities</h3>
         
 	        <div class="project-cards row mb-5 justify-content-lg-center">
