--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 		    </div>
 		    <h3 class="section-title font-weight-bold text-center mb-2">Contact Info</h3>
 		    <div class="section-intro mx-auto text-center mb-3">
-			    The best way to get in touch with me is through email. My gmail is account is jenselby.
+			    The best way to get in touch with me is through email. My gmail account is jenselby.
 		    </div>
 		</div><!--//container-->
 	</section>
