Minor wording change to match the previous sentence

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				    <img class="profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto rounded-circle" src="assets/images/profile.jpg" alt="">
 					<div class="media-body text-center text-md-left">
 					<h2 class="mt-0 display-4 font-weight-bold">Jen Selby</h2>
-					<div class="bio mb-3">Versatile software developer and educator with experience in machine learning, systems engineering, security, design thinking, and backend web development. I worked for a decade as a software engineer before spending seven years teaching computer science.
+					<div class="bio mb-3">Versatile software developer and educator with experience in machine learning, systems engineering, security, design thinking, and backend web development. A decade working as a software engineer followed by seven years teaching computer science.
 					</div><!--//bio-->
 					<a class="theme-btn-on-bg btn font-weight-bold theme-btn-cta" href="#Contact">Contact Me</a>
 					
